--- a/velowrench.UI/Views/Tools/ChainLengthCalculatorView.axaml
+++ b/velowrench.UI/Views/Tools/ChainLengthCalculatorView.axaml
@@ -13,6 +13,44 @@
 
     <UserControl.Resources>
         <converters:EnumToStringConverter x:Key="EnumToStringConverter" />
+
+        <!--  DataTemplate when calculation is computed  -->
+        <DataTemplate x:Key="ChainLengthComputedContentTemplate" x:DataType="vm:Tools.ChainLengthCalculatorViewModel">
+            <StackPanel>
+                <TextBlock Margin="16,16,16,8" HorizontalAlignment="Left" VerticalAlignment="Center"
+                           FontSize="12" FontWeight="SemiBold"
+                           Foreground="{DynamicResource SemiColorTertiary}"
+                           Text="{x:Static res:Languages.RecommendedValue}" />
+                <Border HorizontalAlignment="Stretch"
+                        Background="{DynamicResource SemiColorTertiaryLight}"
+                        CornerRadius="7">
+                    <Grid Margin="10,10"
+                          ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto">
+                        <TextBlock Grid.Row="0" Grid.Column="0"
+                                   Margin="0,0,10,0" VerticalAlignment="Center"
+                                   FontWeight="DemiBold"
+                                   Foreground="{DynamicResource SemiColorText0}"
+                                   Text="{x:Static res:Languages.ChainLengthLabel}" />
+                        <controls:LengthTextBlock Grid.Row="0" Grid.Column="1"
+                                                  HorizontalAlignment="Left" VerticalAlignment="Center"
+                                                  FontWeight="Bold"
+                                                  Foreground="{DynamicResource SemiColorSuccess}"
+                                                  Format="0.00"
+                                                  Value="{Binding RecommendedChainLength}" />
+                        <TextBlock Grid.Row="1" Grid.Column="0"
+                                   Margin="0,10,10,0"
+                                   FontWeight="DemiBold"
+                                   Foreground="{DynamicResource SemiColorText0}"
+                                   Text="{x:Static res:Languages.ChainLinksLabel}" />
+                        <TextBlock Grid.Row="1" Grid.Column="1"
+                                   Margin="0,10,0,0" HorizontalAlignment="Left"
+                                   FontWeight="Bold"
+                                   Foreground="{DynamicResource SemiColorSuccess}"
+                                   Text="{Binding RecommendedChainLinks}" />
+                    </Grid>
+                </Border>
+            </StackPanel>
+        </DataTemplate>
     </UserControl.Resources>
 
     <UserControl.Styles>
@@ -69,46 +107,9 @@
 
         <!--  Calculation Status  -->
         <controls:CalculatorStateControl HorizontalAlignment="Stretch"
-                                         State="{Binding CurrentState}"
-                                         ErrorMessage="{Binding CalculatorInputErrors}">
-            <controls:CalculatorStateControl.ComputedContent>
-                <!-- Custom content for ChainLength calculator results -->
-                <StackPanel>
-                    <TextBlock Margin="16,16,16,8" HorizontalAlignment="Left" VerticalAlignment="Center"
-                               FontSize="12" FontWeight="SemiBold"
-                               Foreground="{DynamicResource SemiColorTertiary}"
-                               Text="{x:Static res:Languages.RecommendedValue}" />
-                    <Border HorizontalAlignment="Stretch"
-                            Background="{DynamicResource SemiColorTertiaryLight}"
-                            CornerRadius="7">
-                        <Grid Margin="10,10"
-                              ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto">
-                            <TextBlock Grid.Row="0" Grid.Column="0"
-                                       Margin="0,0,10,0" VerticalAlignment="Center"
-                                       FontWeight="DemiBold"
-                                       Foreground="{DynamicResource SemiColorText0}"
-                                       Text="{x:Static res:Languages.ChainLengthLabel}" />
-                            <controls:LengthTextBlock Grid.Row="0" Grid.Column="1"
-                                                      HorizontalAlignment="Left" VerticalAlignment="Center"
-                                                      FontWeight="Bold"
-                                                      Foreground="{DynamicResource SemiColorSuccess}"
-                                                      Format="0.00"
-                                                      Value="{Binding RecommendedChainLength}" />
-                            <TextBlock Grid.Row="1" Grid.Column="0"
-                                       Margin="0,10,10,0"
-                                       FontWeight="DemiBold"
-                                       Foreground="{DynamicResource SemiColorText0}"
-                                       Text="{x:Static res:Languages.ChainLinksLabel}" />
-                            <TextBlock Grid.Row="1" Grid.Column="1"
-                                       Margin="0,10,0,0" HorizontalAlignment="Left"
-                                       FontWeight="Bold"
-                                       Foreground="{DynamicResource SemiColorSuccess}"
-                                       Text="{Binding RecommendedChainLinks}" />
-                        </Grid>
-                    </Border>
-                </StackPanel>
-            </controls:CalculatorStateControl.ComputedContent>
-        </controls:CalculatorStateControl>
+                                         ComputedContentTemplate="{StaticResource ChainLengthComputedContentTemplate}"
+                                         ErrorMessage="{Binding CalculatorInputErrors}"
+                                         State="{Binding CurrentState}" />
 
     </StackPanel>
 </UserControl>
