--- a/velowrench.UI/Views/Tools/SpokeLengthCalculatorView.axaml
+++ b/velowrench.UI/Views/Tools/SpokeLengthCalculatorView.axaml
@@ -2,6 +2,7 @@
              xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:calculatorEnums="using:velowrench.Calculations.Enums"
+             xmlns:controls="using:velowrench.UI.Controls"
              xmlns:converters="clr-namespace:velowrench.UI.Converters"
              xmlns:materialIcons="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
              xmlns:res="clr-namespace:velowrench.UI.Resources"
@@ -13,6 +14,45 @@
 
     <UserControl.Resources>
         <converters:UnitDisplayConverter x:Key="UnitDisplayConverter" />
+
+        <!--  Empty template for computed state - to be implemented later  -->
+        <DataTemplate x:Key="SpokeLengthComputedContentTemplate" x:DataType="vm:Tools.SpokeLengthCalculatorViewModel">
+            <StackPanel>
+                <TextBlock Margin="16,16,16,8" HorizontalAlignment="Left" VerticalAlignment="Center"
+                           FontSize="12" FontWeight="SemiBold"
+                           Foreground="{DynamicResource SemiColorTertiary}"
+                           Text="Recommended spoke length" />
+                <Border HorizontalAlignment="Stretch"
+                        Background="{DynamicResource SemiColorTertiaryLight}"
+                        CornerRadius="7">
+                    <Grid Margin="10,10"
+                          ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto">
+                        <TextBlock Grid.Row="0" Grid.Column="0"
+                                   Margin="0,0,10,0" VerticalAlignment="Center"
+                                   FontWeight="DemiBold"
+                                   Foreground="{DynamicResource SemiColorText0}"
+                                   Text="Gear side:" />
+                        <controls:LengthTextBlock Grid.Row="0" Grid.Column="1"
+                                                  HorizontalAlignment="Left" VerticalAlignment="Center"
+                                                  FontWeight="Bold"
+                                                  Foreground="{DynamicResource SemiColorSuccess}"
+                                                  Format="0.00"
+                                                  Value="{Binding RecommendedSpokeLengthGearSide}" />
+                        <TextBlock Grid.Row="1" Grid.Column="0"
+                                   Margin="0,10,10,0" VerticalAlignment="Center"
+                                   FontWeight="DemiBold"
+                                   Foreground="{DynamicResource SemiColorText0}"
+                                   Text="Non-gear side:" />
+                        <controls:LengthTextBlock Grid.Row="1" Grid.Column="1"
+                                                  Margin="0,10,10,0" HorizontalAlignment="Left" VerticalAlignment="Center"
+                                                  FontWeight="Bold"
+                                                  Foreground="{DynamicResource SemiColorSuccess}"
+                                                  Format="0.00"
+                                                  Value="{Binding RecommendedSpokeLengthNonGearSide}" />
+                    </Grid>
+                </Border>
+            </StackPanel>
+        </DataTemplate>
     </UserControl.Resources>
 
     <UserControl.Styles>
@@ -30,7 +70,7 @@
     <StackPanel Margin="20,10">
 
         <Border Classes="Group">
-            <TextBlock Text="{x:Static res:Languages.ChainLengthCalculatorHeader}" TextWrapping="Wrap" />
+            <TextBlock Text="Calculate the recommended wheel spoke length using your hub and rim measurements." TextWrapping="Wrap" />
         </Border>
 
         <!--  Hub measurements  -->
@@ -151,7 +191,7 @@
             <TextBlock Grid.Row="2" Grid.Column="0"
                        Margin="0,5,0,0" VerticalAlignment="Center"
                        Text="Lacing pattern" />
-            <ComboBox Grid.Row="2" Grid.Column="1"
+            <ComboBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2"
                       Margin="0,5,5,0" HorizontalAlignment="Stretch"
                       ItemsSource="{Binding AvailableSpokeLacingPatterns}"
                       SelectedValue="{Binding SelectedSpokeLacingPattern}">
@@ -162,6 +202,12 @@
                 </ComboBox.ItemTemplate>
             </ComboBox>
         </Grid>
+
+        <!--  Calculation Status with Custom Control  -->
+        <controls:CalculatorStateControl HorizontalAlignment="Stretch"
+                                         ComputedContentTemplate="{StaticResource SpokeLengthComputedContentTemplate}"
+                                         ErrorMessage="{Binding CalculatorInputErrors}"
+                                         State="{Binding CurrentState}" />
 
     </StackPanel>
 </UserControl>
