--- a/velowrench.UI/Views/Tools/ChainLengthCalculatorView.axaml
+++ b/velowrench.UI/Views/Tools/ChainLengthCalculatorView.axaml
@@ -17,32 +17,32 @@
         <!--  DataTemplate when calculation is computed  -->
         <DataTemplate x:Key="ChainLengthComputedContentTemplate" x:DataType="vm:Tools.ChainLengthCalculatorViewModel">
             <StackPanel>
-                <TextBlock Margin="16,16,16,8" HorizontalAlignment="Left" VerticalAlignment="Center"
-                           FontSize="12" FontWeight="SemiBold"
-                           Foreground="{DynamicResource SemiColorTertiary}"
-                           Text="{x:Static res:Languages.RecommendedValue}" />
                 <Border HorizontalAlignment="Stretch"
                         Background="{DynamicResource SemiColorTertiaryLight}"
                         CornerRadius="7">
                     <Grid Margin="10,10"
-                          ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto">
-                        <TextBlock Grid.Row="0" Grid.Column="0"
+                          ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto, Auto">
+                        <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"
+                                   Margin="0,0,0,10" HorizontalAlignment="Left" VerticalAlignment="Center"
+                                   FontSize="14" FontWeight="Light"
+                                   Text="{x:Static res:Languages.RecommendedValue}" />
+                        <TextBlock Grid.Row="1" Grid.Column="0"
                                    Margin="0,0,10,0" VerticalAlignment="Center"
                                    FontWeight="DemiBold"
                                    Foreground="{DynamicResource SemiColorText0}"
                                    Text="{x:Static res:Languages.ChainLengthLabel}" />
-                        <controls:LengthTextBlock Grid.Row="0" Grid.Column="1"
+                        <controls:LengthTextBlock Grid.Row="1" Grid.Column="1"
                                                   HorizontalAlignment="Left" VerticalAlignment="Center"
                                                   FontWeight="Bold"
                                                   Foreground="{DynamicResource SemiColorSuccess}"
                                                   Format="0.00"
                                                   Value="{Binding RecommendedChainLength}" />
-                        <TextBlock Grid.Row="1" Grid.Column="0"
+                        <TextBlock Grid.Row="2" Grid.Column="0"
                                    Margin="0,10,10,0"
                                    FontWeight="DemiBold"
                                    Foreground="{DynamicResource SemiColorText0}"
                                    Text="{x:Static res:Languages.ChainLinksLabel}" />
-                        <TextBlock Grid.Row="1" Grid.Column="1"
+                        <TextBlock Grid.Row="2" Grid.Column="1"
                                    Margin="0,10,0,0" HorizontalAlignment="Left"
                                    FontWeight="Bold"
                                    Foreground="{DynamicResource SemiColorSuccess}"
