--- a/velowrench.UI/Views/Help/SpokeLengthCalculatorBuildConfigurationHelpView.axaml
+++ b/velowrench.UI/Views/Help/SpokeLengthCalculatorBuildConfigurationHelpView.axaml
@@ -1,8 +1,27 @@
-<UserControl xmlns="https://github.com/avaloniaui"
+<UserControl x:Class="velowrench.UI.Views.Help.SpokeLengthCalculatorBuildConfigurationHelpView"
+             xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="velowrench.UI.Views.Help.SpokeLengthCalculatorBuildConfigurationHelpView">
-  Welcome to Avalonia!
+             xmlns:res="clr-namespace:velowrench.UI.Resources"
+             xmlns:vm="using:velowrench.Core.ViewModels"
+             x:DataType="vm:Help.SpokeLengthCalculatorBuildConfigurationHelpViewModel"
+             Design.Height="840"
+             Design.Width="360">
+
+    <Grid Margin="20,10"
+          ColumnDefinitions="*" RowDefinitions="Auto, Auto,Auto, Auto">
+
+        <TextBlock Grid.Row="0"
+                   FontSize="20" FontWeight="Light" Text="Number of spokes" TextWrapping="Wrap" />
+        <TextBlock Grid.Row="1" Grid.Column="1"
+                   Margin="0,5,0,0"
+                   Text="The number of spokes per wheel (hole count)." TextWrapping="Wrap" />
+
+        <TextBlock Grid.Row="2"
+                   Margin="0,15,0,0"
+                   FontSize="20" FontWeight="Light" Text="Lacing patterns" TextWrapping="Wrap" />
+        <TextBlock Grid.Row="3" Grid.Column="1"
+                   Margin="0,5,0,0"
+                   Text="Cross count: how many times each spoke crosses others (e.g., 3-cross, 2-cross, radial)." TextWrapping="Wrap" />
+    </Grid>
+
 </UserControl>
