--- a/velowrench.UI/Views/Help/SpokeLengthCalculatorHelpView.axaml
+++ b/velowrench.UI/Views/Help/SpokeLengthCalculatorHelpView.axaml
@@ -1,8 +1,76 @@
-<UserControl xmlns="https://github.com/avaloniaui"
+<UserControl x:Class="velowrench.UI.Views.Help.SpokeLengthCalculatorHelpView"
+             xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="velowrench.UI.Views.Help.SpokeLengthCalculatorHelpView">
-  Welcome to Avalonia!
+             xmlns:math="clr-namespace:AvaloniaMath.Controls;assembly=AvaloniaMath"
+             xmlns:res="clr-namespace:velowrench.UI.Resources"
+             xmlns:vm="using:velowrench.Core.ViewModels"
+             x:DataType="vm:Help.SpokeLengthCalculatorHelpViewModel"
+             Design.Height="840"
+             Design.Width="360">
+
+
+    <UserControl.Styles>
+        <Style Selector="TextBlock.Header2">
+            <Setter Property="FontWeight" Value="SemiBold" />
+            <Setter Property="FontSize" Value="15" />
+            <Setter Property="Padding" Value="0,10,0,3" />
+
+        </Style>
+
+        <Style Selector="TextBlock.Content">
+            <Setter Property="TextWrapping" Value="Wrap" />
+        </Style>
+
+        <Style Selector="Border.Group">
+            <Setter Property="Background" Value="{DynamicResource SemiColorTertiaryLight}" />
+            <Setter Property="Padding" Value="16,12" />
+            <Setter Property="CornerRadius" Value="7" />
+        </Style>
+
+        <Style Selector="TextBlock.GroupHeader">
+            <Setter Property="FontSize" Value="12" />
+            <Setter Property="FontWeight" Value="SemiBold" />
+            <Setter Property="Foreground" Value="{DynamicResource SemiColorTertiary}" />
+            <Setter Property="Margin" Value="16,16,16,8" />
+        </Style>
+    </UserControl.Styles>
+
+    <Grid RowDefinitions="Auto, Auto, Auto ,Auto, Auto, Auto">
+
+        <!--  Inputs  -->
+        <TextBlock Grid.Row="0"
+                   Classes="GroupHeader"
+                   Text="{x:Static res:Languages.Inputs}" />
+
+        <Border Grid.Row="1" Classes="Group">
+            <StackPanel>
+                <TextBlock Classes="Header2" Text="Header" />
+                <TextBlock Margin="0,0,0,10"
+                           Classes="Content" Text="Header" />
+
+                <TextBlock Margin="0,0,0,10"
+                           Classes="Content" Text="content" />
+            </StackPanel>
+        </Border>
+
+        <!--  Calculator  -->
+        <TextBlock Grid.Row="2"
+                   Classes="GroupHeader"
+                   Text="{x:Static res:Languages.Calculations}" />
+
+        <Border Grid.Row="3" Classes="Group">
+            <StackPanel />
+
+        </Border>
+
+        <!--  Results  -->
+        <TextBlock Grid.Row="4"
+                   Classes="GroupHeader"
+                   Text="{x:Static res:Languages.Results}" />
+        <Border Grid.Row="5" Classes="Group">
+            <StackPanel />
+        </Border>
+
+    </Grid>
+
 </UserControl>
