--- a/velowrench.UI/Views/Help/SpokeLengthCalculatorHubMeasurementHelpView.axaml
+++ b/velowrench.UI/Views/Help/SpokeLengthCalculatorHubMeasurementHelpView.axaml
@@ -9,28 +9,60 @@
              Design.Height="840"
              Design.Width="360">
 
-    <Grid Margin="20,10"
-          ColumnDefinitions="*" RowDefinitions="Auto, Auto,Auto, Auto,Auto, Auto">
-        <Svg x:Name="HubDiagram"
-             Grid.Row="0" Grid.Column="0"
-             Margin="0,15,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"
-             Path="avares://velowrench.UI/Assets/front_hub_measurements.svg" Stretch="Uniform" />
+    <StackPanel Margin="20,10" Orientation="Vertical">
 
-        <TextBlock Grid.Row="1" Grid.Column="1"
-                   Margin="0,15,0,0"
-                   FontWeight="Bold" Text="DL= Center to flange non-gear side " TextWrapping="Wrap" />
-        <TextBlock Grid.Row="2" Grid.Column="1"
-                   Text="The distance from the hub centerline to the left flange." TextWrapping="Wrap" />
+        <TextBlock Text="Due to the gear, rear hubs are asymmetrical." TextWrapping="Wrap" />
+        <TextBlock Margin="0,0,0,15"
+                   Text="Front hubs may also be slightly different if they have a disc brake (rotor side inboard)." TextWrapping="Wrap" />
 
-        <TextBlock Grid.Row="3" Grid.Column="1"
-                   Margin="0,10,0,0"
-                   FontWeight="Bold" Text="DR= Center to flange gear side " TextWrapping="Wrap" />
-        <TextBlock Grid.Row="4" Grid.Column="1"
-                   Text="The distance from the hub centerline to the right flange." TextWrapping="Wrap" />
+        <Grid ColumnDefinitions="*" RowDefinitions="Auto, Auto,Auto, Auto,Auto, Auto">
 
-        <TextBlock Grid.Row="5" Grid.Column="1"
-                   Margin="0,10,0,0"
-                   FontStyle="Italic" Text="For a front wheel DL = DR" TextWrapping="Wrap" />
-    </Grid>
+            <TextBlock Grid.Row="0"
+                       FontSize="20" FontWeight="Light" Text="Center to flange" TextWrapping="Wrap" />
+
+            <Svg x:Name="HubDiagramSideView"
+                 Grid.Row="1" Grid.Column="0"
+                 Margin="0,15,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"
+                 Path="avares://velowrench.UI/Assets/front_hub_measurements_sideview.svg" Stretch="Uniform" />
+
+            <TextBlock Grid.Row="2" Grid.Column="1"
+                       Margin="0,15,0,0"
+                       FontWeight="Bold" Text="WL= Center to flange non-gear side " TextWrapping="Wrap" />
+            <TextBlock Grid.Row="3" Grid.Column="1"
+                       Text="The distance from the hub centerline to the left flange." TextWrapping="Wrap" />
+
+            <TextBlock Grid.Row="4" Grid.Column="1"
+                       Margin="0,10,0,0"
+                       FontWeight="Bold" Text="WR= Center to flange gear side " TextWrapping="Wrap" />
+            <TextBlock Grid.Row="5" Grid.Column="1"
+                       Text="The distance from the hub centerline to the right flange." TextWrapping="Wrap" />
+        </Grid>
+
+        <Grid Margin="0,15,0,0"
+              ColumnDefinitions="*" RowDefinitions="Auto, Auto,Auto, Auto,Auto, Auto, Auto, Auto">
+
+            <TextBlock Grid.Row="0"
+                       FontSize="20" FontWeight="Light" Text="Hub diameter" TextWrapping="Wrap" />
+
+            <Svg x:Name="HubDiagramFrontView"
+                 Grid.Row="1" Grid.Column="0"
+                 Margin="20,15,10,0" HorizontalAlignment="Center" VerticalAlignment="Center"
+                 Path="avares://velowrench.UI/Assets/front_hub_measurements_frontview.svg" Stretch="Uniform" />
+
+            <TextBlock Grid.Row="2" Grid.Column="1"
+                       Margin="0,15,0,0"
+                       FontWeight="Bold" Text="DL= Hub diameter non-gear side " TextWrapping="Wrap" />
+            <TextBlock Grid.Row="3" Grid.Column="1"
+                       Text="The diameter of the circle through the centers of the spoke holes on the right flange." TextWrapping="Wrap" />
+
+            <TextBlock Grid.Row="4" Grid.Column="1"
+                       Margin="0,10,0,0"
+                       FontWeight="Bold" Text="DR= Hub diameter gear side " TextWrapping="Wrap" />
+            <TextBlock Grid.Row="5" Grid.Column="1"
+                       Text="The diameter of the circle through the centers of the spoke holes on the left flange." TextWrapping="Wrap" />
+
+        </Grid>
+
+    </StackPanel>
 
 </UserControl>
